--- a/R909.md
+++ b/R909.md
@@ -2,4 +2,4 @@
 
 ---
 
-#### [übertakten](/uebertakten.md)  ᐊ  previous | next  ᐅ  [cgminer JAVA API](/cgminer_JAVA_API.md)
+#### [übertakten](/uebertakten.md)  ᐊ  previous | next  ᐅ  [⚙️ cgminer JAVA API](/cgminer_JAVA_API.md)
