--- a/R909.md
+++ b/R909.md
@@ -1,5 +1,11 @@
 ﻿# R909 specific
 
+## Example of the R909 USB-Miner
+
+<img src=".assets/R909_1.jpg" alt="R909" width="400" />
+
+<img src=".assets/R909_2.jpg" alt="R909" width="400" />
+
 ---
 
 #### [🌩 Übertakten](/uebertakten.md)  ᐊ  previous | next  ᐅ  [⚙️ cgminer JAVA API](/cgminer_JAVA_API.md)
