--- a/R909.md
+++ b/R909.md
@@ -2,9 +2,9 @@
 
 ## Example of the R909 USB-Miner
 
-<img src=".assets/R909_1.jpg" alt="R909" width="400" />
+<img src=".assets/R909_1.JPG" alt="R909" width="400" />
 
-<img src=".assets/R909_2.jpg" alt="R909" width="400" />
+<img src=".assets/R909_2.JPG" alt="R909" width="400" />
 
 ---
 
